--- a/package.json
+++ b/package.json
@@ -61,5 +61,10 @@
 		"mocha": "^9.2.2",
 		"typescript": "^4.5.5",
 		"@vscode/test-electron": "^2.1.3"
-	}
+	},
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/fmendes/dependencygraphforsf"
+	},
+	"publisher": "FERNANDOFERNANDEZ"
 }
